--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,8 @@
 [submodule "fa22-lab-starter"]
 	path = fa22-lab-starter
 	url = https://github.com/shubulan/fa22-lab-starter.git
+	branch = labing/shubulan
 [submodule "fa22-proj1-starter"]
 	path = fa22-proj1-starter
 	url = https://github.com/shubulan/fa22-proj1-starter.git
+	branch = proj1/shubulan
