--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,7 @@
 	path = fa22-proj2-starter
 	url = https://github.com/shubulan/fa22-proj2-starter.git
 	branch = dev/shubulan
+[submodule "fa22-proj3-starter"]
+	path = fa22-proj3-starter
+	url = git@github.com:shubulan/fa22-proj3-starter.git
+	branch = dev/shubulan
